--- a/BlazorShop.Web/Pages/ProdutoDetalhes.razor
+++ b/BlazorShop.Web/Pages/ProdutoDetalhes.razor
@@ -24,7 +24,12 @@ else
                 </b>
             </p>
             <div>
-                <button class="btn btn-success">
+                <button class="btn btn-success"
+                    @onclick="() => AdicionarAoCarrinho_Click(new CarrinhoItemAdicionaDto{
+                        CarrinhoId = UsuarioLogado.CarrinhoId,
+                        ProdutoId = Produto.Id,
+                        Quantidade = 1
+                    })">
                     Incluir no Carrinho
                 </button>
             </div>
@@ -36,6 +41,10 @@ else
 @code {
     [Inject]
     public IProdutoService? ProdutoService { get; set; }
+    [Inject]
+    public ICarrinhoCompraService? carrinhoCompraService { get; set; }
+    [Inject]
+    public NavigationManager? NavigationManager { get; set; }
 
     [Parameter]
     public int Id { get; set; }
@@ -50,6 +59,20 @@ else
         }
         catch (Exception err)
         {
+            MensagemErro = err.Message;
+        }
+    }
+
+    protected async Task AdicionarAoCarrinho_Click(CarrinhoItemAdicionaDto carrinhoItemAdicionaDto)
+    {
+        try
+        {
+            var carrinhoItemDto = await carrinhoCompraService.AdicionaItem(carrinhoItemAdicionaDto);
+            NavigationManager.NavigateTo("/CarrinhoCompra");
+        }
+        catch (Exception err)
+        {
+            //Log Exception
             MensagemErro = err.Message;
         }
     }
