Criação do botão de adicionar item ao carrinho, estilo e script javascript para alterar a visão dele e função para atualizar o preço e quantidade no carrinho

--- a/BlazorShop.Web/Pages/CarrinhoCompra.razor
+++ b/BlazorShop.Web/Pages/CarrinhoCompra.razor
@@ -1,4 +1,5 @@
 ﻿@page "/CarrinhoCompra"
+@inject IJSRuntime Js;
 
 @if (CarrinhoCompraItens is null && MensagemErro is null)
 {
@@ -27,13 +28,17 @@ else
                             <div class="mb-4">
                                 @item.ProdutoDescricao
                             </div>
-                            <span>Preço: <b>@item.Preco.ToString("C")</b></span>
-                            <div>
-                                <button @onclick="(()=> DeletaCarrinhoItem_Click(item.Id))"
-                                    class="btn btn-danger sm">
-                                    <span class="oi oi-trash"></span>    
+                            <span>
+                                Preço: <b>@item.Preco.ToString("C")</b>
+                                <input @oninput="()=>AtualizaQuantidade_Input(item.Id)"  type="number" @bind="@item.Quantidade" />
+                                <button data-itemId='@item.Id' class="btn btn-info btn-sm atualizaquantidade" @onclick="(()=> AtualizaQuantidadeCarrinhoItem_Click(item.Id, item.Quantidade))">
+                                    <i class="oi oi-check" />
                                 </button>
-                            </div>
+                                <br />
+                                <button @onclick="(()=> DeletaCarrinhoItem_Click(item.Id))" class="btn btn-danger sm">
+                                    <span class="oi oi-trash"></span>
+                                </button>
+                            </span>
                         </div>
                     </div>
                     <br />
@@ -42,7 +47,7 @@ else
             <div class="col-md-3">
                 <h5>Carrinho - Resumo</h5>
                 <dic class="mt-2">
-                    <div>Total - </div>
+                    <div>Total - (@QuantidadeTotal items)&nbsp;<br/><b>@PrecoTotal</b></div>
                     <a href="#" class="btn btn-success">
                         <span class="oi oi-credit-card"></span>&nbsp; Fechar Pedido
                     </a>
@@ -67,12 +72,16 @@ else
 
     public string? MensagemErro { get; set; }
 
+    protected string? PrecoTotal { get; set; }
+    protected int QuantidadeTotal { get; set; }
+
     protected override async Task OnInitializedAsync()
     {
         try
         {
-            CarrinhoCompraItens = await CarrinhoCompraService
-                                        .GetItens(UsuarioLogado.UsuarioId);
+            CarrinhoCompraItens = await CarrinhoCompraService.GetItens(UsuarioLogado.UsuarioId);
+
+            CalculaResumoCarrinhoTotal();
         }
         catch (Exception err)
         {
@@ -88,6 +97,8 @@ else
 
         // Remoção do item da coleção de objtos da mermoria no cliente
         await RemoveCarrinhoItem(id);
+
+        CalculaResumoCarrinhoTotal();
     }
 
     private CarrinhoItemDto GetCarrinhoItem(int id)
@@ -99,5 +110,69 @@ else
     {
         var carrinhoItemDto = GetCarrinhoItem(id);
         CarrinhoCompraItens.Remove(carrinhoItemDto);
+    }
+
+    protected async Task AtualizaQuantidadeCarrinhoItem_Click(int id, int quantidade)
+    {
+        try
+        {
+            if (quantidade > 0)
+            {
+                var atualizaItemDto = new CarrinhoItemAtualizaQuantidadeDto
+                    {
+                        CarrinhoItemId = id,
+                        Quantidade = quantidade
+                    };
+
+                var retornaItemAtualizadoDTto = await CarrinhoCompraService.AtualizaQuantidade(atualizaItemDto);
+
+
+                AtualizaPrecoTotalItem(retornaItemAtualizadoDTto);
+                CalculaResumoCarrinhoTotal();
+                await Js.InvokeVoidAsync("TornaBotaoAtualizarQuantidadeVisivel", id, false);
+            }
+            else
+            {
+                var item = CarrinhoCompraItens.FirstOrDefault(i => i.Id == id);
+                if (item is not null)
+                {
+                    item.Quantidade = 1;
+                    item.PrecoTotal = item.Preco;
+                }
+            }
+        }
+        catch (Exception err)
+        {
+            //Log Exception
+            //MensagemErro = err.Message;
+            throw;
+        }
+    }
+    private void SetPrecoTotal()
+    {
+        PrecoTotal = CarrinhoCompraItens.Sum(p => p.PrecoTotal).ToString("C");
+    }
+    private void SetQuantidadeTotal()
+    {
+        QuantidadeTotal = CarrinhoCompraItens.Sum(p => p.Quantidade);
+    }
+    private void CalculaResumoCarrinhoTotal()
+    {
+        SetPrecoTotal();
+        SetQuantidadeTotal();
+    }
+    private void AtualizaPrecoTotalItem(CarrinhoItemDto carrinhoItemDto)
+    {
+        var item = GetCarrinhoItem(carrinhoItemDto.Id);
+
+        if (item is not null)
+        {
+            item.PrecoTotal = carrinhoItemDto.Preco * carrinhoItemDto.Quantidade;
+        }
+    }
+
+    protected async Task AtualizaQuantidade_Input(int id)
+    {
+        await Js.InvokeVoidAsync("TornaBotaoAtualizarQuantidadeVisivel", id, true);
     }
 }
