Alteração para aparecer as categorias de produtos por link no nav menu e a inclusão da descrição do produto

--- a/BlazorShop.Web/Pages/ExibirProdutos.razor
+++ b/BlazorShop.Web/Pages/ExibirProdutos.razor
@@ -5,6 +5,7 @@
             <div class="card">
                 <img class="img-thumbnail" src="@item.ImagemUrl">
                 <div class="card-body">
+                    <p class="mb-4">@item.Descricao</p>
                     <h5 class="card-title mb-3">
                         @item.Preco.ToString("c")
                     </h5>
