--- a/BlazorShop.Web/Shared/NavMenu.razor
+++ b/BlazorShop.Web/Shared/NavMenu.razor
@@ -18,11 +18,8 @@
             </NavLink>
         </div>
 
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="produtos">
-                <span class="oi oi-basket" aria-hidden="true"></span> Produtos
-            </NavLink>
-        </div>
+        <ProdutosCategoriaNavMenu />
+
         <div class="nav-item px-3 d-sm-none">
             <NavLink class="nav-link" href="CarrinhoCompra">
                 <span class="oi oi-cart" aria-hidden="true"></span>&nbsp;Carrinho(<b>@carrinhoCompraItemContador</b>)
