Criação e utilização do LocalStorage para armazenar e persisitr os dados do carrinho e produtos, além de melhorias de layout e correção de bugs gerais

--- a/BlazorShop.Web/Pages/CarrinhoCompra.razor
+++ b/BlazorShop.Web/Pages/CarrinhoCompra.razor
@@ -68,6 +68,12 @@ else
     [Inject]
     public ICarrinhoCompraService? CarrinhoCompraService { get; set; }
 
+    [Inject]
+    public IGerenciaProdutosLocalStorageService? GerenciaProdutosLocalStorageService { get; set; }
+
+    [Inject]
+    public IGerenciaCarrinhoItensLocalStorageService? GerenciaCarrinhoItensLocalStorageService { get; set; }
+
     public List<CarrinhoItemDto>? CarrinhoCompraItens { get; set; }
 
     public string? MensagemErro { get; set; }
@@ -79,7 +85,7 @@ else
     {
         try
         {
-            CarrinhoCompraItens = await CarrinhoCompraService.GetItens(UsuarioLogado.UsuarioId);
+            CarrinhoCompraItens = await GerenciaCarrinhoItensLocalStorageService.GetCollection();
 
             //CalculaResumoCarrinhoTotal();
             CarrinhoChanged();
@@ -112,6 +118,8 @@ else
     {
         var carrinhoItemDto = GetCarrinhoItem(id);
         CarrinhoCompraItens.Remove(carrinhoItemDto);
+
+        await GerenciaCarrinhoItensLocalStorageService.SaveCollection(CarrinhoCompraItens);
     }
 
     protected async Task AtualizaQuantidadeCarrinhoItem_Click(int id, int quantidade)
@@ -163,7 +171,7 @@ else
         SetPrecoTotal();
         SetQuantidadeTotal();
     }
-    private void AtualizaPrecoTotalItem(CarrinhoItemDto carrinhoItemDto)
+    private async Task AtualizaPrecoTotalItem(CarrinhoItemDto carrinhoItemDto)
     {
         var item = GetCarrinhoItem(carrinhoItemDto.Id);
 
@@ -171,6 +179,8 @@ else
         {
             item.PrecoTotal = carrinhoItemDto.Preco * carrinhoItemDto.Quantidade;
         }
+
+        await GerenciaCarrinhoItensLocalStorageService.SaveCollection(CarrinhoCompraItens);
     }
 
     protected async Task AtualizaQuantidade_Input(int id)
