--- a/BlazorShop.Web/Pages/ProdutosPorCategoria.razor
+++ b/BlazorShop.Web/Pages/ProdutosPorCategoria.razor
@@ -2,7 +2,7 @@
 
 @if (ProdutosDto is null && MensagemErro is null)
 {
-    <ExibirSpinner/>
+    <ExibirSpinner />
 }
 else if (MensagemErro is not null)
 {
@@ -28,6 +28,12 @@ else
     public IProdutoService? ProdutoService { get; set; }
     public IEnumerable<ProdutoDto>? ProdutosDto { get; set; }
 
+    [Inject]
+    public IGerenciaProdutosLocalStorageService? GerenciaProdutosLocalStorageService { get; set; }
+
+    [Inject]
+    public IGerenciaCarrinhoItensLocalStorageService? GerenciaCarrinhoItensLocalStorageService { get; set; }
+
     public string? NomeCategoria { get; set; }
     public string? MensagemErro { get; set; }
 
@@ -35,7 +41,8 @@ else
     {
         try
         {
-            ProdutosDto = await ProdutoService.GetItensPorCategoria(CategoriaId);
+            //ProdutosDto = await ProdutoService.GetItensPorCategoria(CategoriaId);
+            ProdutosDto = await GetColecaoProdutosPorCategoriaId(CategoriaId);
 
             if (ProdutosDto != null && ProdutosDto.Count() > 0)
             {
@@ -50,6 +57,20 @@ else
         catch (Exception err)
         {
             MensagemErro = err.Message;
+        }
+    }
+
+    private async Task<IEnumerable<ProdutoDto>> GetColecaoProdutosPorCategoriaId(int categoriaId)
+    {
+        var produtoCollection = await GerenciaProdutosLocalStorageService.GetCollection();
+
+        if (produtoCollection != null)
+        {
+            return produtoCollection.Where(p => p.CategoriaId == categoriaId);
+        }
+        else
+        {
+            return await ProdutoService.GetItensPorCategoria(categoriaId);
         }
     }
 }
